Series of unit test fixes